[package]
name = "helper-rust"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "ddappsec_helper_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Tokio runtime with all features enabled
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_tuple = { version = "1.0" }
rmp-serde = "1.1"      # MessagePack support for serde
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
futures = "0.3"
log = { version = "0.4", features = ["kv", "kv_std"] }  # Logging facade with key-value support
simplelog = "0.12"     # Simple logger with file support
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
stderrlog = "0.6.0"
libc = "0.2"
arc-swap = "1.7"
crossbeam-epoch = "0.9"  # Epoch-based memory reclamation
libddwaf = { path = "../third_party/libddwaf-rust/crates/libddwaf" }
libddwaf-sys = { path = "../third_party/libddwaf-rust/crates/libddwaf-sys", default-features = false }
base64 = "0.22.1"
flate2 = "1.0"         # gzip compression for schemas

[features]
coverage = []

[build-dependencies]
cc = "1.0"

[dev-dependencies]
serial_test = "3"

[profile.dev]
debug = 2
