[package]
name = "ddtrace-php"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "lib.rs"

[dependencies]
ddcommon = { path = "../../libdatadog/ddcommon" }
ddcommon-ffi = { path = "../../libdatadog/ddcommon-ffi" }
ddtelemetry = { path = "../../libdatadog/ddtelemetry" }
ddtelemetry-ffi = { path = "../../libdatadog/ddtelemetry-ffi" }
json = "0.12.4"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
paste = "1"
tempfile = {version = "3.3"}


[build-dependencies]
cbindgen = "0.24"
cc_utils = { path = "../../libdatadog/tools/cc_utils" }
sidecar_mockgen = { path = "../../libdatadog/tools/sidecar_mockgen" }
